--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,7 @@ phases:
       - mvn clean install
       - echo Logging in to Amazon ECR...
       - aws --version
-      - echo $AWS_DEFAULT_REGION
-      - $(aws ecr get-login --region $AWS_DEFAULT_REGION)
+      - $(aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 967156500699.dkr.ecr.eu-west-1.amazonaws.com)
       - REPOSITORY_URI=967156500699.dkr.ecr.eu-west-1.amazonaws.com/springboot-app
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
